dev/kind/manifest/envoy-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: envoy
  namespace: envoy
  labels:
    app: envoy
spec:
  containers:
    - name: envoy
      image: 110y/bootes-envoy:latest
      imagePullPolicy: Never
      command:
        - 'envoy'
      args:
        - '-c'
        - '/etc/envoy/envoy.yaml'
        - '--service-node'
        - '$(POD_NAME).$(NAMESPACE)'
        - '--service-cluster'
        - 'cluster'
