dev/kind/manifest/jaeger.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: jaeger
spec:
  type: ClusterIP
  selector:
    app: jaeger
  ports:
    - name: collector
      protocol: TCP
      port: 14268
      targetPort: 14268
    - name: query
      protocol: TCP
      port: 16686
      targetPort: 16686

---
apiVersion: v1
kind: Pod
metadata:
  name: jaeger
  namespace: jaeger
  labels:
    app: jaeger
spec:
  containers:
    - name: jaeger
      image: jaegertracing/all-in-one:1.17.1
