dev/kind/manifest/prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: query
      protocol: TCP
      port: 9090
      targetPort: 9090

---
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  containers:
    - name: prometheus
      image: prom/prometheus:v2.17.1
      volumeMounts:
        - name: config
          mountPath: /etc/prometheus
  volumes:
    - name: config
      configMap:
        name: config
