dev/kind/manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bootes
  namespace: bootes
spec:
  type: ClusterIP
  selector:
    app: bootes
  ports:
    - name: grpc
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: http-metrics
      protocol: TCP
      port: 4000
      targetPort: 4000
