dev/kind/manifest/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission
webhooks:
  - name: route.bootes.io
    rules:
      - apiGroups:
          - bootes.io
        apiVersions:
          - "*"
        operations:
          - "*"
        resources:
          - routes
    failurePolicy: Fail
    clientConfig:
      # base64 -w0 dev/kind/certs/ca.crt
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVS1gzcUJHTjN3QXpFdmZBaTZVS2lrNVBPTlNZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd01URXZNQzBHQTFVRUF3d21RbTl2ZEdWeklFRmtiV2x6YzJsdmJpQkRiMjUwY205c2JHVnlJRmRsWW1odgpiMnNnUTBFd0hoY05NakF3TlRFMU1ESTBPREF4V2hjTk1qQXdOakUwTURJME9EQXhXakF4TVM4d0xRWURWUVFECkRDWkNiMjkwWlhNZ1FXUnRhWE56YVc5dUlFTnZiblJ5YjJ4c1pYSWdWMlZpYUc5dmF5QkRRVENDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTHJXZEhEM1lsRGE4ekdkT1hrazRRcExhbkw4eTFmZQpGUmE3SWQ2Q0FG [...]
      service:
        name: bootes
        namespace: bootes
        path: /validate-bootes-io-v1-route
        port: 3000
